@@ -72,15 +72,15 @@ char *optheory [] =
    NULL,
    NULL,
    /* Simplifying */
-   "equality",
-   "equality",
-   "equality,[symmetry]",
-   "equality,[symmetry]",
-   "equality",
-   "equality",
-   "equality",
-   "equality,[symmetry]",
-   "equality,[symmetry]",
+   NULL,
+   NULL,
+   NULL,
+   NULL,
+   NULL,
+   NULL,
+   NULL,
+   NULL,
+   NULL,
    "answers",
    /* Simplification/Modfication for FOF */
    NULL,
@@ -92,11 +92,11 @@ char *optheory [] =
    NULL,
    "answers",
    /* Generating */
-   "equality",
-   "equality",
-   "equality,[symmetry]",
-   "equality",
-   "equality",
+   NULL,
+   NULL,
+   NULL,
+   NULL,
+   NULL,
    /* Others */
    NULL,
    NULL,
