@@ -5,7 +5,8 @@ Version 1.8 ->
 
 - Fixed bug that caused proof output to fail in rare cases when the
   proof was found in preprocessing.
-
+- Took out "theory(equality)" from TSTP-output, since FOL-EQ is now
+  assumed the default logic.
 
 Version 1.7 -> 1.8 Gopaldhara
 
